@@ -18,27 +18,36 @@
 
 package io.ballerina.cli.cmd;
 
+import com.google.gson.Gson;
+import com.google.gson.JsonObject;
 import io.ballerina.projects.ProjectException;
+import io.ballerina.projects.Settings;
+import io.ballerina.projects.TomlDocument;
 import io.ballerina.projects.internal.ProjectFiles;
+import io.ballerina.projects.internal.SettingsBuilder;
 import io.ballerina.projects.util.ProjectConstants;
+import io.ballerina.projects.util.ProjectUtils;
 import org.apache.commons.io.FileUtils;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.testng.Assert;
+import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 import org.wso2.ballerinalang.util.RepoUtils;
 import picocli.CommandLine;
 
+import java.io.BufferedReader;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 
 import static io.ballerina.cli.cmd.CommandOutputUtils.getOutput;
+import static io.ballerina.projects.util.ProjectConstants.BALA_EXTENSION;
 
 /**
  * Push command tests.
@@ -49,8 +58,10 @@ import static io.ballerina.cli.cmd.CommandOutputUtils.getOutput;
 public class PushCommandTest extends BaseCommandTest {
 
     private static final String VALID_PROJECT = "validApplicationProject";
+    private static final String POM_EXTENSION = ".pom";
     private Path testResources;
 
+    @Override
     @BeforeClass
     public void setup() throws IOException {
         super.setup();
@@ -58,11 +69,21 @@ public class PushCommandTest extends BaseCommandTest {
             this.testResources = super.tmpDir.resolve("build-test-resources");
             URI testResourcesURI = Objects.requireNonNull(getClass().getClassLoader().getResource("test-resources"))
                     .toURI();
-            Files.walkFileTree(Paths.get(testResourcesURI),
-                               new BuildCommandTest.Copy(Paths.get(testResourcesURI), this.testResources));
+            Files.walkFileTree(Path.of(testResourcesURI),
+                               new BuildCommandTest.Copy(Path.of(testResourcesURI), this.testResources));
         } catch (URISyntaxException e) {
             Assert.fail("error loading resources");
         }
+    }
+
+    @AfterMethod(alwaysRun = true)
+    @Override
+    public void afterMethod() throws IOException {
+        super.afterMethod();
+        Path validBalProject = Path.of("build/validProjectWithTarget");
+        ProjectUtils.deleteDirectory(validBalProject);
+        validBalProject = Path.of("build/tool-gayals");
+        ProjectUtils.deleteDirectory(validBalProject);
     }
 
     @Test(description = "Push package with invalid path")
@@ -70,22 +91,87 @@ public class PushCommandTest extends BaseCommandTest {
         Path validBalProject = this.testResources.resolve(VALID_PROJECT);
         PushCommand pushCommand = new PushCommand(validBalProject, printStream, printStream, false);
         String invalidPath = "tests";
-        new CommandLine(pushCommand).parse(invalidPath);
+        new CommandLine(pushCommand).parseArgs(invalidPath);
         pushCommand.execute();
 
         String buildLog = readOutput(true);
-        String actual = buildLog.replaceAll("\r", "");
+        String actual = buildLog.replace("\r", "");
         String expected = "path provided for the bala file does not exist: " + invalidPath + ".";
         Assert.assertTrue(actual.contains(expected));
     }
+
+    @Test (description = "Push a package to a custom remote repository")
+    public void testPushPackageCustom() throws IOException {
+        String org = "luheerathan";
+        String packageName = "pact1";
+        String version = "0.1.0";
+        String expected = "Successfully pushed src/test/resources/test-resources/custom-repo/" +
+                "luheerathan-pact1-any-0.1.0.bala to 'repo-push-pull' repository.\n";
+
+        Path mockRepo = Path.of("build/ballerina-home/repositories/repo-push-pull");
+        Path balaPath = Path.of("src/test/resources/test-resources/custom-repo/luheerathan-pact1-any-0.1.0.bala");
+        PushCommand pushCommand = new PushCommand(null, printStream, printStream, false, balaPath);
+        String[] args = { "--repository=repo-push-pull" };
+        new CommandLine(pushCommand).parseArgs(args);
+        try (MockedStatic<RepoUtils> repoUtils = Mockito.mockStatic(RepoUtils.class, Mockito.CALLS_REAL_METHODS)) {
+            repoUtils.when(RepoUtils::readSettings).thenReturn(readSettings(testResources.resolve("custom-repo")
+                    .resolve("Settings.toml"), mockRepo.toAbsolutePath().toString()
+                    .replace("\\", "/")));
+            pushCommand.execute();
+        }
+        String buildLog = readOutput(true);
+        String actual = buildLog.replace("\r", "");
+        Assert.assertEquals(actual.replace("\\", "/"), expected);
+        String artifact = packageName + "-" + version + BALA_EXTENSION;
+        String pomFile = packageName + "-" + version + POM_EXTENSION;
+        String pushPullPath = mockRepo.resolve(org).resolve(packageName).resolve(version).toAbsolutePath().toString();
+        for (String ext : new String[]{".sha1", ".md5", ""}) {
+            Assert.assertTrue(Path.of(pushPullPath, artifact + ext).toFile().exists());
+            Assert.assertTrue(Path.of(pushPullPath, pomFile + ext).toFile().exists());
+        }
+    }
+
+    @Test (description = "Push a package to a custom remote repository(not exist in Settings.toml)")
+    public void testPushPackageNonExistingCustom() throws IOException {
+        String expected = "ballerina: unsupported repository 'repo-push-pul' found. " +
+                "Only 'local' repository and repositories mentioned in the Settings.toml are supported.\n";
+
+        Path mockRepo = Path.of("build/ballerina-home/repositories/repo-push-pull");
+        Path balaPath = Path.of("src/test/resources/test-resources/custom-repo/luheerathan-pact1-any-0.1.0.bala");
+        PushCommand pushCommand = new PushCommand(null, printStream, printStream, false, balaPath);
+        String[] args = { "--repository=repo-push-pul" };
+        new CommandLine(pushCommand).parseArgs(args);
+        try (MockedStatic<RepoUtils> repoUtils = Mockito.mockStatic(RepoUtils.class, Mockito.CALLS_REAL_METHODS)) {
+            repoUtils.when(RepoUtils::readSettings).thenReturn(
+                    readSettings(testResources.resolve("custom-repo/Settings.toml"),
+                            mockRepo.toAbsolutePath().toString()));
+            pushCommand.execute();
+        }
+        String buildLog = readOutput(true);
+        String actual = buildLog.replaceAll("\r", "");
+        Assert.assertEquals(actual, expected);
+    }
+
+    private static Settings readSettings(Path settingsFilePath, String repoPath) {
+        try {
+            String settingString = Files.readString(settingsFilePath);
+            settingString = settingString.replaceAll("REPO_PATH", repoPath);
+            TomlDocument settingsTomlDocument = TomlDocument
+                    .from(String.valueOf(settingsFilePath.getFileName()), settingString);
+            SettingsBuilder settingsBuilder = SettingsBuilder.from(settingsTomlDocument);
+            return settingsBuilder.settings();
+        } catch (IOException e) {
+            return Settings.from();
+        }
+    }
+
 
     @Test(description = "Push package with invalid file extension")
     public void testPushWithInvalidFileExtension() throws IOException {
         Path validBalProject = this.testResources.resolve(VALID_PROJECT);
         PushCommand pushCommand = new PushCommand(validBalProject, printStream, printStream, false);
-        String invalidExtensionFilePath = this.testResources.resolve("non-bal-file")
-                .resolve("hello_world.txt").toString();
-        new CommandLine(pushCommand).parse(invalidExtensionFilePath);
+        String invalidExtensionFilePath = this.testResources.resolve("non-bal-file/hello_world.txt").toString();
+        new CommandLine(pushCommand).parseArgs(invalidExtensionFilePath);
         pushCommand.execute();
 
         String buildLog = readOutput(true);
@@ -96,37 +182,87 @@ public class PushCommandTest extends BaseCommandTest {
 
     @Test(description = "Push package with custom path")
     public void testPushWithCustomPath() throws IOException {
-        Path validBalProject = Paths.get("build").resolve("validProjectWithTarget");
+        Path validBalProject = Path.of("build/validProjectWithTarget");
 
         FileUtils.copyDirectory(
                 this.testResources.resolve("validProjectWithTarget").toFile(), validBalProject.toFile());
         FileUtils.moveDirectory(
                 validBalProject.resolve("target-dir").toFile(), validBalProject.resolve("custom").toFile());
 
-        Path customTargetDirBalaPath = validBalProject.resolve("custom").resolve("bala")
-                .resolve("foo-winery-any-0.1.0.bala");
+        Path customTargetDirBalaPath = validBalProject.resolve("custom/bala/foo-winery-any-0.1.0.bala");
         PushCommand pushCommand = new PushCommand(validBalProject, printStream, printStream, false,
                 customTargetDirBalaPath);
         String[] args = { "--repository=local" };
-        new CommandLine(pushCommand).parse(args);
+        new CommandLine(pushCommand).parseArgs(args);
 
-        Path mockRepo = Paths.get("build").resolve("ballerina-home");
+        Path mockRepo = Path.of("build/ballerina-home");
 
         try (MockedStatic<RepoUtils> repoUtils = Mockito.mockStatic(RepoUtils.class)) {
             repoUtils.when(RepoUtils::createAndGetHomeReposPath).thenReturn(mockRepo);
+            repoUtils.when(RepoUtils::getBallerinaShortVersion).thenReturn("1.0.0");
+            repoUtils.when(RepoUtils::readSettings).thenReturn(Settings.from());
             pushCommand.execute();
         }
 
         String buildLog = readOutput(true);
         String actual = buildLog.replaceAll("\r", "");
-        String expected = "Successfully pushed " + customTargetDirBalaPath.toString() + " to 'local' repository.";
+        String expected = "Successfully pushed " + customTargetDirBalaPath + " to 'local' repository.";
         Assert.assertTrue(actual.contains(expected));
 
         try {
-            ProjectFiles.validateBalaProjectPath(mockRepo.resolve("repositories").resolve("local").resolve("bala")
-                    .resolve("foo").resolve("winery").resolve("0.1.0").resolve("any"));
+            ProjectFiles.validateBalaProjectPath(mockRepo.resolve("repositories/local/bala/foo/winery/0.1.0/any"));
         } catch (ProjectException e) {
             Assert.fail(e.getMessage());
+        }
+    }
+
+    @Test(description = "Push a tool to local repository")
+    public void testPushToolToLocal() throws IOException {
+        Path validBalProject = Path.of("build/tool-gayals");
+
+        FileUtils.copyDirectory(
+                this.testResources.resolve("tool-gayals").toFile(), validBalProject.toFile());
+        FileUtils.moveDirectory(
+                validBalProject.resolve("target-dir").toFile(), validBalProject.resolve("custom").toFile());
+
+        Path customTargetDirBalaPath =
+                validBalProject.resolve("custom/bala/gayaldassanayake-tool_gayal-java17-1.1.0.bala");
+        PushCommand pushCommand = new PushCommand(validBalProject, printStream, printStream, false,
+                customTargetDirBalaPath);
+        String[] args = { "--repository=local" };
+        new CommandLine(pushCommand).parseArgs(args);
+
+        Path mockRepo = Path.of("build/ballerina-home");
+
+        try (MockedStatic<RepoUtils> repoUtils = Mockito.mockStatic(RepoUtils.class)) {
+            repoUtils.when(RepoUtils::createAndGetHomeReposPath).thenReturn(mockRepo);
+            repoUtils.when(RepoUtils::getBallerinaShortVersion).thenReturn("1.0.0");
+            repoUtils.when(RepoUtils::readSettings).thenReturn(Settings.from());
+            pushCommand.execute();
+        }
+
+        String buildLog = readOutput(true);
+        String actual = buildLog.replaceAll("\r", "");
+        String expected = "Successfully pushed " + customTargetDirBalaPath + " to 'local' repository.";
+        Assert.assertTrue(actual.contains(expected));
+
+        try {
+            ProjectFiles.validateBalaProjectPath(
+                    mockRepo.resolve("repositories/local/bala/gayaldassanayake/tool_gayal/1.1.0/java17"));
+        } catch (ProjectException e) {
+            Assert.fail(e.getMessage());
+        }
+
+        Path localToolJsonPath = mockRepo.resolve("repositories/local/bala/local-tools.json");
+
+        Assert.assertTrue(Files.exists(localToolJsonPath));
+
+        try (BufferedReader bufferedReader = Files.newBufferedReader(localToolJsonPath, StandardCharsets.UTF_8)) {
+            JsonObject localToolJson = new Gson().fromJson(bufferedReader, JsonObject.class);
+            JsonObject pkgDesc = localToolJson.get("luhee").getAsJsonObject();
+
+            Assert.assertEquals(pkgDesc.get("org").getAsString(), "gayaldassanayake");
+            Assert.assertEquals(pkgDesc.get("name").getAsString(), "tool_gayal");
         }
 
     }
@@ -138,7 +274,7 @@ public class PushCommandTest extends BaseCommandTest {
 
         Path validBalProject = this.testResources.resolve(VALID_PROJECT);
         PushCommand pushCommand = new PushCommand(validBalProject, printStream, printStream, false);
-        new CommandLine(pushCommand).parse();
+        new CommandLine(pushCommand).parseArgs();
         pushCommand.execute();
 
         String buildLog = readOutput(true);
@@ -153,22 +289,20 @@ public class PushCommandTest extends BaseCommandTest {
 
         // Build project
         PackCommand packCommand = new PackCommand(projectPath, printStream, printStream, false, true);
-        new CommandLine(packCommand).parse();
+        new CommandLine(packCommand).parseArgs();
         packCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("compile-bal-project.txt"));
-        Assert.assertTrue(
-                projectPath.resolve("target").resolve("bala").resolve("foo-winery-any-0.1.0.bala").toFile().exists());
+        Assert.assertTrue(projectPath.resolve("target/bala/foo-winery-any-0.1.0.bala").toFile().exists());
 
         // Delete bala
-        Assert.assertTrue(
-                projectPath.resolve("target").resolve("bala").resolve("foo-winery-any-0.1.0.bala").toFile().delete());
+        Assert.assertTrue(projectPath.resolve("target/bala/foo-winery-any-0.1.0.bala").toFile().delete());
 
         // Push
         String expected = "cannot find bala file for the package: winery. Run "
                 + "'bal pack' to compile and generate the bala.";
         PushCommand pushCommand = new PushCommand(projectPath, printStream, printStream, false);
-        new CommandLine(pushCommand).parse();
+        new CommandLine(pushCommand).parseArgs();
         pushCommand.execute();
 
         buildLog = readOutput(true);
@@ -182,10 +316,10 @@ public class PushCommandTest extends BaseCommandTest {
         // Test if no arguments was passed in
         String[] args = { "sample2", "--help" };
         PushCommand pushCommand = new PushCommand(validBalProject, printStream, printStream, false);
-        new CommandLine(pushCommand).parse(args);
+        new CommandLine(pushCommand).parseArgs(args);
         pushCommand.execute();
 
-        Assert.assertTrue(readOutput().contains("ballerina-push - Push packages to Ballerina Central"));
+        Assert.assertTrue(readOutput().contains("ballerina-push - Push the Ballerina Archive (BALA)"));
     }
 
     @Test(description = "Test push command with help flag")
@@ -194,33 +328,34 @@ public class PushCommandTest extends BaseCommandTest {
         // Test if no arguments was passed in
         String[] args = { "-h" };
         PushCommand pushCommand = new PushCommand(validBalProject, printStream, printStream, false);
-        new CommandLine(pushCommand).parse(args);
+        new CommandLine(pushCommand).parseArgs(args);
         pushCommand.execute();
 
-        Assert.assertTrue(readOutput().contains("ballerina-push - Push packages to Ballerina Central"));
+        Assert.assertTrue(readOutput().contains("ballerina-push - Push the Ballerina Archive (BALA)"));
     }
 
     @Test
     public void testPushToCustomRepo() throws IOException {
-        Path validBalProject = Paths.get("build").resolve("validProjectWithTarget");
+        Path validBalProject = Path.of("build/validProjectWithTarget");
         FileUtils.copyDirectory(
                 this.testResources.resolve("validProjectWithTarget").toFile(), validBalProject.toFile());
         FileUtils.moveDirectory(
                 validBalProject.resolve("target-dir").toFile(), validBalProject.resolve("target").toFile());
 
-        Path mockRepo = Paths.get("build").resolve("ballerina-home");
+        Path mockRepo = Path.of("build/ballerina-home");
         // Test if no arguments was passed in
         String[] args = { "--repository=local" };
         PushCommand pushCommand = new PushCommand(validBalProject, printStream, printStream, false);
-        new CommandLine(pushCommand).parse(args);
+        new CommandLine(pushCommand).parseArgs(args);
         try (MockedStatic<RepoUtils> repoUtils = Mockito.mockStatic(RepoUtils.class)) {
             repoUtils.when(RepoUtils::createAndGetHomeReposPath).thenReturn(mockRepo);
+            repoUtils.when(RepoUtils::getBallerinaShortVersion).thenReturn("1.0.0");
+            repoUtils.when(RepoUtils::readSettings).thenReturn(Settings.from());
             pushCommand.execute();
         }
 
         try {
-            ProjectFiles.validateBalaProjectPath(mockRepo.resolve("repositories").resolve("local").resolve("bala")
-                    .resolve("foo").resolve("winery").resolve("0.1.0").resolve("any"));
+            ProjectFiles.validateBalaProjectPath(mockRepo.resolve("repositories/local/bala/foo/winery/0.1.0/any"));
         } catch (ProjectException e) {
             Assert.fail(e.getMessage());
         }
@@ -233,16 +368,15 @@ public class PushCommandTest extends BaseCommandTest {
 
         // Pack project
         PackCommand packCommand = new PackCommand(projectPath, printStream, printStream, false, true);
-        new CommandLine(packCommand).parse();
+        new CommandLine(packCommand).parseArgs();
         packCommand.execute();
-        Assert.assertTrue(
-                projectPath.resolve("target").resolve("bala").resolve("foo-winery-any-0.1.0.bala").toFile().exists());
+        Assert.assertTrue(projectPath.resolve("target/bala/foo-winery-any-0.1.0.bala").toFile().exists());
 
         // Push
         String expected = "Package.md is missing in bala file";
 
         PushCommand pushCommand = new PushCommand(projectPath, printStream, printStream, false);
-        new CommandLine(pushCommand).parse();
+        new CommandLine(pushCommand).parseArgs();
         pushCommand.execute();
 
         String buildLog = readOutput(true);
@@ -250,7 +384,7 @@ public class PushCommandTest extends BaseCommandTest {
         Assert.assertTrue(actual.contains(expected));
     }
 
-    @Test
+    @Test (enabled = false)
     public void testPushWithEmptyPackageMd() throws IOException {
         Path projectPath = this.testResources.resolve(VALID_PROJECT);
         System.setProperty("user.dir", projectPath.toString());
@@ -258,18 +392,17 @@ public class PushCommandTest extends BaseCommandTest {
 
         // Pack project
         PackCommand packCommand = new PackCommand(projectPath, printStream, printStream, false, true);
-        new CommandLine(packCommand).parse();
+        new CommandLine(packCommand).parseArgs();
         packCommand.execute();
-        Assert.assertTrue(
-                projectPath.resolve("target").resolve("bala").resolve("foo-winery-any-0.1.0.bala").toFile().exists());
+        Assert.assertTrue(projectPath.resolve("target/bala/foo-winery-any-0.1.0.bala").toFile().exists());
 
         Files.delete(projectPath.resolve(ProjectConstants.PACKAGE_MD_FILE_NAME));
 
         // Push
-        String expected = "package md file cannot be empty";
+        String expected = "md file cannot be empty";
 
         PushCommand pushCommand = new PushCommand(projectPath, printStream, printStream, false);
-        new CommandLine(pushCommand).parse();
+        new CommandLine(pushCommand).parseArgs();
         pushCommand.execute();
 
         String buildLog = readOutput(true);
@@ -282,16 +415,16 @@ public class PushCommandTest extends BaseCommandTest {
         Path projectPath = this.testResources.resolve("validLibraryProject");
         // Build project
         PackCommand packCommand = new PackCommand(projectPath, printStream, printStream, false, true);
-        new CommandLine(packCommand).parse();
+        new CommandLine(packCommand).parseArgs();
         packCommand.execute();
-        Assert.assertTrue(
-                projectPath.resolve("target").resolve("bala").resolve("foo-winery-any-0.1.0.bala").toFile().exists());
+        Assert.assertTrue(projectPath.resolve("target/bala/foo-winery-any-0.1.0.bala").toFile().exists());
 
         String[] args = { "--repository=stdlib.local" };
         PushCommand pushCommand = new PushCommand(projectPath, printStream, printStream, false);
-        new CommandLine(pushCommand).parse(args);
+        new CommandLine(pushCommand).parseArgs(args);
         pushCommand.execute();
-        String errMsg = "unsupported repository 'stdlib.local' found. Only 'local' repository is supported.";
+        String errMsg = "unsupported repository 'stdlib.local' found. Only 'local' repository and repositories " +
+                "mentioned in the Settings.toml are supported.";
         Assert.assertTrue(readOutput().contains(errMsg));
     }
 }
