@@ -18,9 +18,17 @@ package io.ballerina.projects;
 import io.ballerina.compiler.api.symbols.ModuleSymbol;
 import io.ballerina.compiler.api.symbols.ServiceDeclarationSymbol;
 import io.ballerina.compiler.api.symbols.Symbol;
+import io.ballerina.compiler.api.symbols.TypeDescKind;
+import io.ballerina.compiler.api.symbols.TypeReferenceTypeSymbol;
 import io.ballerina.compiler.api.symbols.TypeSymbol;
+import io.ballerina.compiler.api.symbols.UnionTypeSymbol;
+import io.ballerina.compiler.syntax.tree.FunctionDefinitionNode;
+import io.ballerina.compiler.syntax.tree.MethodDeclarationNode;
 import io.ballerina.compiler.syntax.tree.Node;
+import io.ballerina.compiler.syntax.tree.NodeVisitor;
+import io.ballerina.compiler.syntax.tree.ObjectFieldNode;
 import io.ballerina.compiler.syntax.tree.ServiceDeclarationNode;
+import io.ballerina.compiler.syntax.tree.SimpleNameReferenceNode;
 import io.ballerina.compiler.syntax.tree.SyntaxKind;
 import io.ballerina.projects.plugins.completion.CompletionContext;
 import io.ballerina.projects.plugins.completion.CompletionException;
@@ -33,7 +41,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Manages interaction with completion providers via compiler plugins.
@@ -46,11 +53,13 @@ public class CompletionManager {
     private CompletionManager(List<CompilerPluginContextIml> compilerPluginContexts) {
         completionProviders = new HashMap<>();
         compilerPluginContexts.forEach(compilerPluginContextIml -> {
-            for (CompletionProvider<Node> completionProvider : compilerPluginContextIml.completionProviders()) {
+            for (CompletionProvider<? extends Node> completionProvider :
+                    compilerPluginContextIml.completionProviders()) {
                 for (Class<?> attachmentPoint : completionProvider.getSupportedNodes()) {
                     List<CompletionProviderDescriptor> completionProviderList =
                             completionProviders.computeIfAbsent(attachmentPoint, k -> new ArrayList<>());
-                    completionProviderList.add(new CompletionProviderDescriptor(completionProvider,
+                    completionProviderList.add(new CompletionProviderDescriptor(
+                            (CompletionProvider<Node>) completionProvider,
                             compilerPluginContextIml.compilerPluginInfo()));
                 }
             }
@@ -142,13 +151,31 @@ public class CompletionManager {
             return Collections.emptyList();
         }
         List<TypeSymbol> listenerTypes = ((ServiceDeclarationSymbol) serviceSymbol.get()).listenerTypes();
-        return listenerTypes.stream().filter(listenerType -> listenerType.getModule().isPresent())
-                .map(listenerType -> listenerType.getModule().get()).collect(Collectors.toList());
+        return listenerTypes.stream().map(listenerType -> {
+                    if (listenerType.typeKind() == TypeDescKind.UNION) {
+                        return ((UnionTypeSymbol) listenerType).memberTypeDescriptors()
+                                .stream()
+                                .filter(memberType -> getRawType(memberType).typeKind() == TypeDescKind.OBJECT)
+                                .findAny();
+                    }
+                    return Optional.of(listenerType);
+                }).filter(listenerType -> listenerType.isPresent() && listenerType.get().getModule().isPresent())
+                .map(listenerType -> listenerType.get().getModule().get()).toList();
     }
 
-    private boolean isInServiceBodyNodeContext(CompletionContext context, Node referenceNode) {
+    private TypeSymbol getRawType(TypeSymbol typeDescriptor) {
+        if (typeDescriptor.typeKind() == TypeDescKind.TYPE_REFERENCE) {
+            TypeReferenceTypeSymbol typeRef = (TypeReferenceTypeSymbol) typeDescriptor;
+            return typeRef.typeDescriptor();
+        }
+        return typeDescriptor;
+    }
+
+    private boolean isInServiceBodyNodeContext(CompletionContext context,
+                                               Node referenceNode) {
         Optional<LinePosition> cursorPosition = context.cursorPosition();
-        if (referenceNode.kind() != SyntaxKind.SERVICE_DECLARATION || cursorPosition.isEmpty()) {
+        if (referenceNode.kind() != SyntaxKind.SERVICE_DECLARATION
+                || cursorPosition.isEmpty()) {
             return false;
         }
 
@@ -165,22 +192,9 @@ public class CompletionManager {
             return false;
         }
 
-        /* Covers
-          service on new http:Listener(9090) {
-
-                r<cursor>
-
-                resource function get test(http:Caller caller, http:Request req) {
-
-                }
-          }
-        */
-        return serviceDeclarationNode.members().stream()
-                .filter(member -> member.kind() == SyntaxKind.RESOURCE_ACCESSOR_DEFINITION
-                        || member.kind() == SyntaxKind.FUNCTION_DEFINITION)
-                .noneMatch(member -> member.lineRange().startLine().line() <= cursorLine
-                        && cursorLine <= member.lineRange().endLine().line());
-
+        ServiceDeclarationContextValidator validator = new ServiceDeclarationContextValidator(context);
+        validator.visitNode(context.nodeAtCursor());
+        return validator.isValidContext();
     }
 
     /**
@@ -191,7 +205,7 @@ public class CompletionManager {
         private final CompletionProvider<Node> completionProvider;
         private final CompilerPluginInfo compilerPluginInfo;
 
-        public CompletionProviderDescriptor(CompletionProvider completionProvider,
+        public CompletionProviderDescriptor(CompletionProvider<Node> completionProvider,
                                             CompilerPluginInfo compilerPluginInfo) {
             this.completionProvider = completionProvider;
             this.compilerPluginInfo = compilerPluginInfo;
@@ -203,6 +217,72 @@ public class CompletionManager {
 
         public CompilerPluginInfo compilerPluginInfo() {
             return compilerPluginInfo;
+        }
+    }
+
+    /**
+     * Visitor to validate the completion context.
+     *
+     */
+    static class ServiceDeclarationContextValidator extends NodeVisitor {
+
+        private final CompletionContext context;
+        private boolean isValidContext = false;
+
+        public ServiceDeclarationContextValidator(CompletionContext context) {
+            this.context = context;
+        }
+
+        @Override
+        public void visit(ServiceDeclarationNode serviceDeclarationNode) {
+            isValidContext = true;
+        }
+
+        @Override
+        public void visit(SimpleNameReferenceNode simpleNameReferenceNode) {
+            simpleNameReferenceNode.parent().accept(this);
+        }
+
+        @Override
+        public void visit(ObjectFieldNode objectFieldNode) {
+            int cursorPosition = context.cursorPosInTree();
+            isValidContext = objectFieldNode.textRange().startOffset() <= cursorPosition
+                    && cursorPosition <= objectFieldNode.textRange().endOffset()
+                    && objectFieldNode.fieldName().isMissing()
+                    && objectFieldNode.equalsToken().isEmpty();
+        }
+
+        @Override
+        public void visit(FunctionDefinitionNode functionDefinitionNode) {
+            int cursorLine = context.cursorPosition().get().line();
+            isValidContext = cursorLine < functionDefinitionNode.lineRange().startLine().line()
+                    || functionDefinitionNode.lineRange().endLine().line() < cursorLine;
+        }
+
+        @Override
+        public void visit(MethodDeclarationNode methodDeclarationNode) {
+            int cursorLine = context.cursorPosition().get().line();
+            isValidContext = cursorLine < methodDeclarationNode.lineRange().startLine().line()
+                    || methodDeclarationNode.lineRange().endLine().line() < cursorLine;
+        }
+
+        @Override
+        protected void visitSyntaxNode(Node node) {
+            //Do nothing
+        }
+
+        public Boolean isValidContext() {
+            return this.isValidContext;
+        }
+
+        public void visitNode(Node node) {
+            if (node.kind() == SyntaxKind.LIST) {
+                if (node.parent() != null) {
+                    node.parent().accept(this);
+                }
+            } else {
+                node.accept(this);
+            }
         }
     }
 
