@@ -21,6 +21,7 @@ import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
@@ -33,7 +34,6 @@ import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.PathMatcher;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
@@ -41,12 +41,14 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static io.ballerina.projects.util.ProjectConstants.BALLERINA_TOML;
 import static io.ballerina.projects.util.ProjectConstants.BLANG_SOURCE_EXT;
 import static io.ballerina.projects.util.ProjectConstants.COMPILER_PLUGIN_TOML;
+import static io.ballerina.projects.util.ProjectConstants.DOT;
+import static io.ballerina.projects.util.ProjectConstants.EMPTY_STRING;
+import static io.ballerina.projects.util.ProjectConstants.IMPORT_PREFIX;
 import static io.ballerina.projects.util.ProjectConstants.MODULES_ROOT;
 import static io.ballerina.projects.util.ProjectConstants.RESOURCE_DIR_NAME;
 import static io.ballerina.projects.util.ProjectConstants.TEST_DIR_NAME;
@@ -56,10 +58,13 @@ import static io.ballerina.projects.util.ProjectConstants.TEST_DIR_NAME;
  *
  * @since 2.0.0
  */
-public class FileUtils {
+public final class FileUtils {
 
     private static final String PNG_HEX_HEADER = "89504E470D0A1A0A";
     private static final PathMatcher FILE_MATCHER = FileSystems.getDefault().getPathMatcher("glob:**/Ballerina.toml");
+
+    private FileUtils() {
+    }
 
     /**
      * Get the name of the without the extension.
@@ -68,7 +73,7 @@ public class FileUtils {
      * @return File name without extension.
      */
     public static String getFileNameWithoutExtension(String filePath) {
-        Path fileName = Paths.get(filePath).getFileName();
+        Path fileName = Path.of(filePath).getFileName();
         if (null != fileName) {
             int index = indexOfExtension(fileName.toString());
             return index == -1 ? fileName.toString() :
@@ -117,6 +122,9 @@ public class FileUtils {
      */
     public static String readFileAsString(String path) throws IOException {
         InputStream is = FileUtils.class.getClassLoader().getResourceAsStream(path);
+        if (is == null) {
+            throw new FileNotFoundException("Schema file not found: " + path);
+        }
         InputStreamReader inputStreamReader = null;
         BufferedReader br = null;
         StringBuilder sb = new StringBuilder();
@@ -163,8 +171,10 @@ public class FileUtils {
         }
 
         if (Files.isDirectory(path)) {
-            for (Path dir : Files.list(path).collect(Collectors.toList())) {
-                deletePath(dir);
+            try (Stream<Path> paths = Files.list(path)) {
+                for (Path dir : paths.toList()) {
+                    deletePath(dir);
+                }
             }
         }
 
@@ -291,6 +301,24 @@ public class FileUtils {
         }
     }
 
+    public static void replaceTemplateName(Path path, String templateName, String packageName) {
+        Optional<Path> fileName = Optional.ofNullable(path.getFileName());
+        if (fileName.isPresent() && fileName.get().toString().endsWith(BLANG_SOURCE_EXT)) {
+            try {
+                String content = Files.readString(path);
+                String oldImportStatementStart = IMPORT_PREFIX + templateName + DOT;
+                String newImportStatementStart = IMPORT_PREFIX + packageName + DOT;
+                if (content.contains(oldImportStatementStart)) {
+                    content = content.replaceAll(oldImportStatementStart, newImportStatementStart);
+                    Files.write(path, content.getBytes(StandardCharsets.UTF_8));
+                }
+            } catch (IOException e) {
+                throw new RuntimeException(
+                        "Error while replacing template name in module import statements: " + path, e);
+            }
+        }
+    }
+
     /**
      * Get the list of files and directories in a directory.
      *
@@ -311,19 +339,28 @@ public class FileUtils {
      * Copy files to the given destination.
      */
     public static class Copy extends SimpleFileVisitor<Path> {
-        private Path fromPath;
-        private Path toPath;
-        private StandardCopyOption copyOption;
+        private final Path fromPath;
+        private final Path toPath;
+        private final String templateName;
+        private final String packageName;
+        private final StandardCopyOption copyOption;
 
 
-        public Copy(Path fromPath, Path toPath, StandardCopyOption copyOption) {
+        public Copy(Path fromPath, Path toPath, String templateName, String packageName,
+                    StandardCopyOption copyOption) {
             this.fromPath = fromPath;
             this.toPath = toPath;
+            this.templateName = templateName;
+            this.packageName = packageName;
             this.copyOption = copyOption;
         }
 
         public Copy(Path fromPath, Path toPath) {
-            this(fromPath, toPath, StandardCopyOption.REPLACE_EXISTING);
+            this(fromPath, toPath, EMPTY_STRING, EMPTY_STRING, StandardCopyOption.REPLACE_EXISTING);
+        }
+
+        public Copy(Path fromPath, Path toPath, String templateName, String packageName) {
+            this(fromPath, toPath, templateName, packageName, StandardCopyOption.REPLACE_EXISTING);
         }
 
         @Override
@@ -342,6 +379,10 @@ public class FileUtils {
                 throws IOException {
 
             Files.copy(file, toPath.resolve(fromPath.relativize(file).toString()), copyOption);
+            if (!packageName.equals(EMPTY_STRING) && !templateName.equals(EMPTY_STRING) &&
+                    !packageName.equals(templateName)) {
+                replaceTemplateName(toPath.resolve(fromPath.relativize(file).toString()), templateName, packageName);
+            }
             return FileVisitResult.CONTINUE;
         }
     }
@@ -360,7 +401,7 @@ public class FileUtils {
      * Look for existing Ballerina.toml file in the given directory up to 10 levels.
      */
     public static class BallerinaTomlChecker extends SimpleFileVisitor<Path> {
-        private Path startingPath;
+        private final Path startingPath;
         private boolean ballerinaTomlFound = false;
 
         public boolean isBallerinaTomlFound() {
@@ -376,8 +417,7 @@ public class FileUtils {
         }
 
         @Override
-        public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs)
-                throws IOException {
+        public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
 
             int depth = dir.getNameCount() - startingPath.getNameCount();
             if (depth >= 10) {
@@ -387,8 +427,7 @@ public class FileUtils {
         }
 
         @Override
-        public FileVisitResult visitFile(Path file, BasicFileAttributes attrs)
-                throws IOException {
+        public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
 
             if (FILE_MATCHER.matches(file)) {
                 setBallerinaTomlFound(true);
