@@ -27,7 +27,6 @@ import org.testng.Assert;
 import org.testng.annotations.Test;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.StringJoiner;
@@ -38,8 +37,7 @@ import java.util.StringJoiner;
  * @since 2.0.0
  */
 public class DotGraphsTests {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src", "test", "resources",
-            "dot-graphs");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/dot-graphs");
 
     @Test(enabled = false)
     public void test() {
