@@ -19,13 +19,14 @@ package io.ballerinalang.compiler.internal.treegen.targets.node;
 
 import io.ballerinalang.compiler.internal.treegen.TreeGenConfig;
 import io.ballerinalang.compiler.internal.treegen.model.json.SyntaxNode;
+import io.ballerinalang.compiler.internal.treegen.model.json.SyntaxNodeMetadata;
 import io.ballerinalang.compiler.internal.treegen.model.json.SyntaxTree;
 import io.ballerinalang.compiler.internal.treegen.model.template.TreeNodeClass;
 import io.ballerinalang.compiler.internal.treegen.targets.SourceText;
 import io.ballerinalang.compiler.internal.treegen.targets.Target;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * The class {@code AbstractNodeTarget} represent a generic entity that converts a
@@ -50,16 +51,17 @@ public abstract class AbstractNodeTarget extends Target {
     protected abstract List<String> getImportClasses(SyntaxNode syntaxNode);
 
     @Override
-    public List<SourceText> execute(SyntaxTree syntaxTree) {
+    public List<SourceText> execute(SyntaxTree syntaxTree, HashMap<String, SyntaxNodeMetadata> nodeMetadataMap) {
         return syntaxTree.nodes()
                 .stream()
-                .map(this::generateNodeClass)
+                .map(syntaxNode -> generateNodeClass(syntaxNode, nodeMetadataMap))
                 .map(treeNodeClass -> getSourceText(treeNodeClass, getOutputDir(), getClassName(treeNodeClass)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private TreeNodeClass generateNodeClass(SyntaxNode syntaxNode) {
+    private TreeNodeClass generateNodeClass(SyntaxNode syntaxNode, HashMap<String,
+            SyntaxNodeMetadata> nodeMetadataMap) {
         List<String> importClassList = getImportClasses(syntaxNode);
-        return convertToTreeNodeClass(syntaxNode, getPackageName(), importClassList);
+        return convertToTreeNodeClass(syntaxNode, getPackageName(), importClassList, nodeMetadataMap);
     }
 }
