@@ -32,10 +32,8 @@ import org.eclipse.lsp4j.services.LanguageServer;
 
 import java.io.FileInputStream;
 import java.io.InputStreamReader;
-import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -50,8 +48,7 @@ import java.util.concurrent.CompletableFuture;
 public class BallerinaExampleService implements ExtendedLanguageServerService {
     private static final String BBE_DEF_JSON = "index.json";
     private static final String EXAMPLES_DIR = "examples";
-    private static final Type EXAMPLE_CATEGORY_TYPE = new TypeToken<List<BallerinaExampleCategory>>() {
-    }.getType();
+    private static final TypeToken<List<BallerinaExampleCategory>> EXAMPLE_CATEGORY_TYPE = new TypeToken<>() { };
     private  LSClientLogger clientLogger;
 
     @Override
@@ -65,7 +62,7 @@ public class BallerinaExampleService implements ExtendedLanguageServerService {
         return CompletableFuture.supplyAsync(() -> {
             BallerinaExampleListResponse response = new BallerinaExampleListResponse();
             Gson gson = new Gson();
-            Path bbeJSONPath = Paths.get(CommonUtil.BALLERINA_HOME).resolve(EXAMPLES_DIR).resolve(BBE_DEF_JSON);
+            Path bbeJSONPath = Path.of(CommonUtil.BALLERINA_HOME).resolve(EXAMPLES_DIR).resolve(BBE_DEF_JSON);
             try {
                 InputStreamReader fileReader = new InputStreamReader(
                         new FileInputStream(bbeJSONPath.toFile()), StandardCharsets.UTF_8);
