@@ -17,7 +17,13 @@
  */
 package org.ballerinalang.langserver.workspace;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
 import com.google.gson.JsonPrimitive;
+import io.ballerina.compiler.api.SemanticModel;
 import io.ballerina.projects.Document;
 import io.ballerina.projects.Module;
 import io.ballerina.projects.Project;
@@ -25,6 +31,7 @@ import io.ballerina.projects.ProjectException;
 import io.ballerina.projects.ProjectKind;
 import io.ballerina.projects.util.ProjectConstants;
 import org.apache.commons.io.FileUtils;
+import org.ballerinalang.diagramutil.DiagramUtil;
 import org.ballerinalang.langserver.command.executors.RunExecutor;
 import org.ballerinalang.langserver.command.executors.StopExecutor;
 import org.ballerinalang.langserver.common.utils.CommonUtil;
@@ -35,6 +42,7 @@ import org.ballerinalang.langserver.commons.command.LSCommandExecutorException;
 import org.ballerinalang.langserver.commons.eventsync.exceptions.EventSyncException;
 import org.ballerinalang.langserver.commons.workspace.WorkspaceDocumentException;
 import org.ballerinalang.langserver.contexts.LanguageServerContextImpl;
+import org.ballerinalang.langserver.extensions.ballerina.document.ExecutorPositionsUtil;
 import org.eclipse.lsp4j.DidChangeTextDocumentParams;
 import org.eclipse.lsp4j.DidOpenTextDocumentParams;
 import org.eclipse.lsp4j.FileChangeType;
@@ -56,7 +64,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -76,8 +83,9 @@ import static org.awaitility.Awaitility.await;
  * @since 2.0.0
  */
 public class TestWorkspaceManager {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/project");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/project");
     private final String dummyContent = "function foo() {" + CommonUtil.LINE_SEPARATOR + "}";
+    private final String dummyDidChangeContent = "function foo1() {" + CommonUtil.LINE_SEPARATOR + "}";
     private BallerinaWorkspaceManager workspaceManager;
 
     @BeforeMethod
@@ -87,7 +95,7 @@ public class TestWorkspaceManager {
     }
 
     @Test(dataProvider = "fileOpenUpdateTestDataProvider")
-    public void testOpenDocument(Path filePath) throws IOException, WorkspaceDocumentException {
+    public void testOpenDocument(Path filePath) throws WorkspaceDocumentException {
         // Inputs from lang server
         openFile(filePath);
 
@@ -97,20 +105,66 @@ public class TestWorkspaceManager {
         Assert.assertEquals(document.get().syntaxTree().textDocument().toString(), dummyContent);
     }
 
+    @Test(dataProvider = "fileOpenWithDuplicateFilesDataProvider")
+    public void testOpenDocumentWithDuplicateFiles(Path filePath) {
+        try {
+            // Inputs from lang server
+            openFile(filePath);
+            Assert.fail();
+        } catch (Exception e) {
+            Assert.assertTrue(e instanceof WorkspaceDocumentException);
+            Path projectRoot = workspaceManager.projectRoot(filePath);
+            BallerinaWorkspaceManager.ProjectContext projectContext =
+                    workspaceManager.sourceRootToProject.get(projectRoot);
+            Assert.assertTrue(projectContext == null || projectContext.isProjectCrashed());
+        }
+    }
+
+    @Test
+    public void testOpenNewDuplicateFile() throws WorkspaceDocumentException, IOException {
+        Path filePath = RESOURCE_DIRECTORY.resolve("pkg_with_generated_sources1")
+                .resolve("main.bal").toAbsolutePath();
+
+        // Open project
+        openFile(filePath);
+        Path projectRoot = workspaceManager.projectRoot(filePath);
+        BallerinaWorkspaceManager.ProjectContext projectContext =
+                workspaceManager.sourceRootToProject.get(projectRoot);
+        Assert.assertTrue(projectContext != null && !projectContext.isProjectCrashed());
+
+        // Create a new file and send CREATED event
+        Path newFile = RESOURCE_DIRECTORY.resolve("pkg_with_generated_sources1").resolve("modules")
+                .resolve("mod1").resolve("mod1.bal").toAbsolutePath();
+        Files.deleteIfExists(newFile);
+        Files.write(newFile, "int b =10".getBytes());
+        try {
+            openFile(newFile);
+            Assert.fail();
+        } catch (Exception e) {
+            Assert.assertTrue(e instanceof WorkspaceDocumentException
+                    && projectContext.isProjectCrashed());
+        } finally {
+            Files.deleteIfExists(newFile);
+        }
+    }
+
     @Test(dataProvider = "fileOpenUpdateTestDataProvider", dependsOnMethods = "testOpenDocument")
     public void testUpdateDocument(Path filePath) throws WorkspaceDocumentException {
+        //Trigger didOpen to create a project instance corresponding to the filePath
+        openFile(filePath);
+
         // Inputs from lang server
         DidChangeTextDocumentParams params = new DidChangeTextDocumentParams();
         VersionedTextDocumentIdentifier doc = new VersionedTextDocumentIdentifier(filePath.toUri().toString(), 1);
         params.setTextDocument(doc);
-        params.getContentChanges().add(new TextDocumentContentChangeEvent(dummyContent));
+        params.getContentChanges().add(new TextDocumentContentChangeEvent(dummyDidChangeContent));
 
         // Notify workspace manager
         workspaceManager.didChange(filePath, params);
 
         Optional<Document> document = workspaceManager.document(filePath);
         Assert.assertNotNull(document.get());
-        Assert.assertEquals(document.get().syntaxTree().textDocument().toString(), dummyContent);
+        Assert.assertEquals(document.get().syntaxTree().textDocument().toString(), dummyDidChangeContent);
     }
 
     @Test
@@ -501,8 +555,69 @@ public class TestWorkspaceManager {
 
     @Test
     public void testWSRunStopProject()
-            throws WorkspaceDocumentException, EventSyncException, IOException, LSCommandExecutorException {
-        Path filePath = RESOURCE_DIRECTORY.resolve("long_running").resolve("main.bal").toAbsolutePath();
+            throws WorkspaceDocumentException, EventSyncException, LSCommandExecutorException {
+        Path projectPath = RESOURCE_DIRECTORY.resolve("long_running");
+        Path filePath = projectPath.resolve("main.bal");
+        ExecuteCommandContext execContext = runViaLs(filePath);
+        stopViaLs(execContext, projectPath);
+    }
+
+    @Test
+    public void testSemanticApiAfterWSRun()
+            throws WorkspaceDocumentException, EventSyncException, LSCommandExecutorException {
+        Path projectPath = RESOURCE_DIRECTORY.resolve("hello_service");
+        Path filePath = projectPath.resolve("main.bal");
+        ExecuteCommandContext execContext = runViaLs(filePath);
+
+        // Test syntax tree api
+        JsonElement syntaxTreeJSON = DiagramUtil.getSyntaxTreeJSON(workspaceManager.document(filePath).orElseThrow(),
+                workspaceManager.semanticModel(filePath).orElseThrow());
+        // 0 = func def 1 = func def 2 = class def, 3 = listener decl, 4 = service decl
+        JsonObject service = syntaxTreeJSON.getAsJsonObject().get("members").getAsJsonArray().get(4).getAsJsonObject();
+        Assert.assertEquals(service.get("kind").getAsString(), "ServiceDeclaration");
+
+        // test executor positions api
+        JsonArray execPositions = ExecutorPositionsUtil.getExecutorPositions(workspaceManager, filePath);
+        Assert.assertEquals(execPositions.getAsJsonArray().get(0).getAsJsonObject().get("name").getAsString(),
+                "hello");
+
+        stopViaLs(execContext, projectPath);
+    }
+
+    @Test
+    public void testSemanticApiAfterWSRunMultiMod()
+            throws WorkspaceDocumentException, EventSyncException, LSCommandExecutorException, IOException {
+        Path projectPath = RESOURCE_DIRECTORY.resolve("multimod");
+        Path filePath = projectPath.resolve("main.bal");
+
+        DidOpenTextDocumentParams params = new DidOpenTextDocumentParams();
+        TextDocumentItem textDocument = new TextDocumentItem();
+        textDocument.setUri(filePath.toUri().toString());
+        textDocument.setText(new String(Files.readAllBytes(filePath)));
+        params.setTextDocument(textDocument);
+        workspaceManager.didOpen(filePath, params);
+
+        SemanticModel semanticModelPreExec = workspaceManager.semanticModel(filePath).orElseThrow();
+        JsonElement syntaxTreeJSONPreExec = DiagramUtil.getSyntaxTreeJSON(
+                workspaceManager.document(filePath).orElseThrow(),
+                semanticModelPreExec);
+
+        ExecuteCommandContext execContext = runViaLs(filePath);
+
+        SemanticModel semanticModelPostExec = workspaceManager.semanticModel(filePath).orElseThrow();
+        JsonElement syntaxTreeJSONPostExec = DiagramUtil.getSyntaxTreeJSON(
+                workspaceManager.document(filePath).orElseThrow(),
+                semanticModelPostExec);
+
+        Gson gson = new GsonBuilder().setPrettyPrinting().create();
+        Assert.assertEquals(gson.toJson(syntaxTreeJSONPreExec), gson.toJson(syntaxTreeJSONPostExec));
+
+        stopViaLs(execContext, projectPath);
+    }
+
+
+    private ExecuteCommandContext runViaLs(Path filePath)
+            throws WorkspaceDocumentException, EventSyncException, LSCommandExecutorException {
         System.setProperty("java.command", guessJavaPath());
         System.setProperty(BALLERINA_HOME, "./build");
         workspaceManager.loadProject(filePath);
@@ -519,13 +634,16 @@ public class TestWorkspaceManager {
         Boolean didRan = runExecutor.execute(execContext);
         Assert.assertTrue(didRan);
         Assert.assertEquals(reduceToOutString(logCaptor), "Hello, World!" + System.lineSeparator());
+        return execContext;
+    }
 
+    private static void stopViaLs(ExecuteCommandContext execContext, Path projectPath) {
         StopExecutor stopExecutor = new StopExecutor();
         Boolean didStop = stopExecutor.execute(execContext);
         Assert.assertTrue(didStop);
 
-        Path target = RESOURCE_DIRECTORY.resolve("long_running").resolve("target");
-        FileUtils.deleteDirectory(target.toFile());
+        Path target = projectPath.resolve("target");
+        FileUtils.deleteQuietly(target.toFile());
     }
 
     private static String reduceToOutString(ArgumentCaptor<LogTraceParams> logCaptor) {
@@ -544,7 +662,7 @@ public class TestWorkspaceManager {
     }
 
     @Test
-    public void testWorkspaceProjects() throws WorkspaceDocumentException, 
+    public void testWorkspaceProjects() throws WorkspaceDocumentException,
             ExecutionException, InterruptedException {
 
         Path workspacePath = RESOURCE_DIRECTORY.resolve("workspace");
@@ -553,12 +671,11 @@ public class TestWorkspaceManager {
         Path singleFileProject = workspacePath.resolve("workspace2").resolve("single.bal");
         Path project2File = workspacePath.resolve("workspace3").resolve("project2").resolve("main.bal");
         Path project3File = workspacePath.resolve("workspace3").resolve("project3").resolve("main.bal");
-      
-        
+
         //Mock the ExtendedLanguageClient
         MockSettings mockSettings = Mockito.withSettings().stubOnly();
         ExtendedLanguageClient languageClient = Mockito.mock(ExtendedLanguageClient.class, mockSettings);
-        CompletableFuture<List<WorkspaceFolder>> workspaceFolders = 
+        CompletableFuture<List<WorkspaceFolder>> workspaceFolders =
                 CompletableFuture.supplyAsync(this::mockWorkspaceFolders);
         Mockito.when(languageClient.workspaceFolders()).thenReturn(workspaceFolders);
 
@@ -572,7 +689,7 @@ public class TestWorkspaceManager {
         openFile(project2File);
         openFile(project3File);
         openFile(singleFileProject);
-        
+
         //Get and assert response
         Map<Path, Project> pathProjectMap = workspaceManager.workspaceProjects().get();
         Assert.assertEquals(pathProjectMap.size(), 4);
@@ -607,6 +724,14 @@ public class TestWorkspaceManager {
         return new Path[]{
                 RESOURCE_DIRECTORY.resolve("single-file").resolve("main.bal").toAbsolutePath(),
                 RESOURCE_DIRECTORY.resolve("myproject").resolve("main.bal").toAbsolutePath()
+        };
+    }
+
+    @DataProvider
+    public Object[] fileOpenWithDuplicateFilesDataProvider() {
+        return new Path[]{
+                RESOURCE_DIRECTORY.resolve("pkg_with_duplicate_files1").resolve("main.bal").toAbsolutePath(),
+                RESOURCE_DIRECTORY.resolve("pkg_with_duplicate_files2").resolve("main.bal").toAbsolutePath()
         };
     }
 
