@@ -16,11 +16,14 @@
 package org.ballerinalang.formatter.core.declarations;
 
 import org.ballerinalang.formatter.core.FormatterTest;
+import org.ballerinalang.formatter.core.options.FormattingOptions;
+import org.ballerinalang.formatter.core.options.ImportFormattingOptions;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.lang.reflect.Method;
+import java.nio.file.Path;
 
 /**
  * Test the formatting of import declarations.
@@ -29,19 +32,63 @@ import java.nio.file.Paths;
  */
 public class ImportDeclarationsTest extends FormatterTest {
 
-    @Test(dataProvider = "test-file-provider")
+    @Override
+    @Test(dataProvider = "test-file-provider-custom")
     public void test(String source, String sourcePath) throws IOException {
         super.test(source, sourcePath);
+    }
+
+    @Override
+    @Test(dataProvider = "test-file-provider-custom")
+    public void testWithCustomOptions(String source, String sourcePath, FormattingOptions formattingOptions)
+            throws IOException {
+        super.testWithCustomOptions(source, sourcePath, formattingOptions);
     }
 
     @DataProvider(name = "test-file-provider")
     @Override
     public Object[][] dataProvider() {
-        return this.getConfigsList();
+        return new Object[0][];
+    }
+
+    @DataProvider(name = "test-file-provider-custom")
+    @Override
+    public Object[][] dataProviderWithCustomTests(Method testName) {
+        String testResourceDir = this.getTestResourceDir();
+        switch (testName.getName()) {
+            case "test":
+                return new Object[][] {
+                        {"import_declaration_1.bal", testResourceDir},
+                        {"import_declaration_2.bal", testResourceDir},
+                        {"import_declaration_6.bal", testResourceDir},
+                        {"import_declaration_7.bal", testResourceDir},
+                        {"import_declaration_8.bal", testResourceDir},
+                        {"import_declaration_9.bal", testResourceDir},
+                        {"import_declaration_10.bal", testResourceDir},
+                        {"import_declaration_11.bal", testResourceDir}
+                };
+            case "testWithCustomOptions":
+                FormattingOptions optionWithNoGrouping = FormattingOptions.builder()
+                        .setImportFormattingOptions(ImportFormattingOptions.builder().setGroupImports(false).build())
+                        .build();
+                FormattingOptions optionWithNoSorting = FormattingOptions.builder()
+                        .setImportFormattingOptions(ImportFormattingOptions.builder().setSortImports(false).build())
+                        .build();
+                FormattingOptions optionWithNoGroupingAndSorting = FormattingOptions.builder()
+                        .setImportFormattingOptions(
+                                ImportFormattingOptions.builder().setGroupImports(false).setSortImports(false).build())
+                        .build();
+                return new Object[][] {
+                        {"import_declaration_3.bal", testResourceDir, optionWithNoGrouping},
+                        {"import_declaration_4.bal", testResourceDir, optionWithNoSorting},
+                        {"import_declaration_5.bal", testResourceDir, optionWithNoGroupingAndSorting}
+                };
+        }
+        return null;
     }
 
     @Override
     public String getTestResourceDir() {
-        return Paths.get("declarations", "import").toString();
+        return Path.of("declarations", "import").toString();
     }
 }
