@@ -19,12 +19,15 @@
 package org.ballerinalang.testerina.compiler;
 
 import com.google.gson.Gson;
+import io.ballerina.compiler.syntax.tree.AbstractNodeFactory;
+import io.ballerina.compiler.syntax.tree.CaptureBindingPatternNode;
 import io.ballerina.compiler.syntax.tree.ExpressionNode;
 import io.ballerina.compiler.syntax.tree.FunctionArgumentNode;
 import io.ballerina.compiler.syntax.tree.FunctionBodyBlockNode;
 import io.ballerina.compiler.syntax.tree.FunctionDefinitionNode;
 import io.ballerina.compiler.syntax.tree.FunctionSignatureNode;
 import io.ballerina.compiler.syntax.tree.MethodCallExpressionNode;
+import io.ballerina.compiler.syntax.tree.MinutiaeList;
 import io.ballerina.compiler.syntax.tree.ModuleMemberDeclarationNode;
 import io.ballerina.compiler.syntax.tree.Node;
 import io.ballerina.compiler.syntax.tree.NodeFactory;
@@ -36,7 +39,10 @@ import io.ballerina.compiler.syntax.tree.SeparatedNodeList;
 import io.ballerina.compiler.syntax.tree.SimpleNameReferenceNode;
 import io.ballerina.compiler.syntax.tree.StatementNode;
 import io.ballerina.compiler.syntax.tree.SyntaxKind;
+import io.ballerina.compiler.syntax.tree.Token;
+import io.ballerina.compiler.syntax.tree.TypeDescriptorNode;
 import io.ballerina.projects.ProjectException;
+import org.ballerinalang.model.types.TypeKind;
 
 import java.io.File;
 import java.io.FileOutputStream;
@@ -46,7 +52,6 @@ import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -57,7 +62,10 @@ import java.util.concurrent.atomic.AtomicInteger;
  *
  * @since 2201.3.0
  */
-public class TesterinaCompilerPluginUtils {
+public final class TesterinaCompilerPluginUtils {
+
+    private TesterinaCompilerPluginUtils() {
+    }
 
     public static void addSetTestOptionsCall(List<StatementNode> statements) {
         // Add the statement, 'test:setTestOptions(<args[]>);'
@@ -72,12 +80,13 @@ public class TesterinaCompilerPluginUtils {
                         getPositionalArg(TesterinaCompilerPluginConstants.DISABLE_GROUPS_PARAMETER),
                         getPositionalArg(TesterinaCompilerPluginConstants.TESTS_PARAMETER),
                         getPositionalArg(TesterinaCompilerPluginConstants.RERUN_FAILED_PARAMETER),
-                        getPositionalArg(TesterinaCompilerPluginConstants.LIST_GROUPS_PARAMETER)))));
+                        getPositionalArg(TesterinaCompilerPluginConstants.LIST_GROUPS_PARAMETER),
+                        getPositionalArg(TesterinaCompilerPluginConstants.PARALLEL_EXECUTION_PARAMETER)))));
     }
 
     public static void addStartSuiteCall(List<StatementNode> statements) {
         // Add the statement, 'test:startSuite();'
-        statements.add(getFunctionCallStatement(getTestFunctionCall(
+        statements.add(getAssignmentAndFunctionCallStatement(getTestFunctionCall(
                 TesterinaCompilerPluginConstants.START_SUITE_FUNCTION,
                 NodeFactory.createSeparatedNodeList(new ArrayList<>()))));
     }
@@ -91,6 +100,10 @@ public class TesterinaCompilerPluginUtils {
                 NodeFactory.createSeparatedNodeList(new ArrayList<>()),
                 NodeFactory.createToken(SyntaxKind.CLOSE_PAREN_TOKEN))
         ));
+    }
+
+    public static void addExitCodeGlobalVariable(List<ModuleMemberDeclarationNode> globalVarDeclaration) {
+        globalVarDeclaration.add(getExitCodeGlobalVarDclStatement());
     }
 
     public static FunctionDefinitionNode createTestExecutionFunction(List<StatementNode> statements) {
@@ -192,6 +205,39 @@ public class TesterinaCompilerPluginUtils {
                         NodeFactory.createMinutiaeList(NodeFactory.createWhitespaceMinutiae("\n"))));
     }
 
+    public static StatementNode getAssignmentAndFunctionCallStatement(ExpressionNode expression) {
+        return NodeFactory.createAssignmentStatementNode(
+                NodeFactory.createSimpleNameReferenceNode(
+                        NodeFactory.createIdentifierToken(TesterinaCompilerPluginConstants.TEST_EXECUTION_STATE)),
+                NodeFactory.createToken(SyntaxKind.EQUAL_TOKEN, singleWSML(), singleWSML()),
+                expression,
+                NodeFactory.createToken(SyntaxKind.SEMICOLON_TOKEN, NodeFactory.createEmptyMinutiaeList(),
+                        NodeFactory.createMinutiaeList(NodeFactory.createWhitespaceMinutiae("\n"))));
+    }
+
+    public static ModuleMemberDeclarationNode getExitCodeGlobalVarDclStatement() {
+        TypeDescriptorNode typeDescriptor = NodeFactory.createSimpleNameReferenceNode(
+                NodeFactory.createIdentifierToken(TypeKind.INT.typeName()));
+        Token varName = AbstractNodeFactory.createIdentifierToken(
+                TesterinaCompilerPluginConstants.TEST_EXECUTION_STATE, singleWSML(), singleWSML());
+        CaptureBindingPatternNode captureBindingPattern = NodeFactory.createCaptureBindingPatternNode(varName);
+        Token publicKeyword = NodeFactory.createToken(SyntaxKind.PUBLIC_KEYWORD, emptyML(), singleWSML());
+        Token equalsToken = NodeFactory.createToken(SyntaxKind.EQUAL_TOKEN, emptyML(), singleWSML());
+
+        return NodeFactory.createModuleVariableDeclarationNode(
+                NodeFactory.createMetadataNode(null, AbstractNodeFactory.createNodeList()),
+                publicKeyword,
+                NodeFactory.createEmptyNodeList(),
+                NodeFactory.createTypedBindingPatternNode(typeDescriptor, captureBindingPattern),
+                equalsToken,
+                NodeFactory.createBasicLiteralNode(
+                        SyntaxKind.NUMERIC_LITERAL,
+                        NodeFactory.createLiteralValueToken(SyntaxKind.DECIMAL_INTEGER_LITERAL_TOKEN, "0",
+                                emptyML(), emptyML())),
+                NodeFactory.createToken(SyntaxKind.SEMICOLON_TOKEN, NodeFactory.createEmptyMinutiaeList(),
+                        NodeFactory.createMinutiaeList(NodeFactory.createWhitespaceMinutiae("\n"))));
+    }
+
     public static SeparatedNodeList<FunctionArgumentNode> getFunctionParamList(PositionalArgumentNode... args) {
 
         List<Node> nodeList = new ArrayList<>();
@@ -241,7 +287,9 @@ public class TesterinaCompilerPluginUtils {
                         NodeFactory.createToken(SyntaxKind.COMMA_TOKEN),
                         getStringParameter(TesterinaCompilerPluginConstants.RERUN_FAILED_PARAMETER),
                         NodeFactory.createToken(SyntaxKind.COMMA_TOKEN),
-                        getStringParameter(TesterinaCompilerPluginConstants.LIST_GROUPS_PARAMETER)),
+                        getStringParameter(TesterinaCompilerPluginConstants.LIST_GROUPS_PARAMETER),
+                        NodeFactory.createToken(SyntaxKind.COMMA_TOKEN),
+                        getStringParameter(TesterinaCompilerPluginConstants.PARALLEL_EXECUTION_PARAMETER)),
                 NodeFactory.createToken(SyntaxKind.CLOSE_PAREN_TOKEN), returnTypeDescriptorNode);
     }
 
@@ -290,7 +338,7 @@ public class TesterinaCompilerPluginUtils {
                 NodeFactory.createSimpleNameReferenceNode(NodeFactory.createIdentifierToken(argName)));
     }
 
-    public static void writeCacheMapAsJson(Map map, Path path, String fileName) {
+    public static void writeCacheMapAsJson(Map<?, ?> map, Path path, String fileName) {
         if (!Files.exists(path)) {
             try {
                 Files.createDirectories(path);
@@ -299,7 +347,7 @@ public class TesterinaCompilerPluginUtils {
             }
         }
 
-        Path jsonFilePath = Paths.get(path.toString(), fileName);
+        Path jsonFilePath = Path.of(path.toString(), fileName);
         File jsonFile = new File(jsonFilePath.toString());
         try (FileOutputStream fileOutputStream = new FileOutputStream(jsonFile)) {
             try (Writer writer = new OutputStreamWriter(fileOutputStream, StandardCharsets.UTF_8)) {
@@ -312,5 +360,13 @@ public class TesterinaCompilerPluginUtils {
         } catch (IOException e) {
             throw new ProjectException("couldn't write cache data to the file : " + e.toString());
         }
+    }
+
+    private static MinutiaeList singleWSML() {
+        return emptyML().add(NodeFactory.createWhitespaceMinutiae(" "));
+    }
+
+    private static MinutiaeList emptyML() {
+        return NodeFactory.createEmptyMinutiaeList();
     }
 }
