@@ -41,7 +41,6 @@ import org.testng.annotations.Test;
 
 import java.io.PrintStream;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -53,10 +52,10 @@ import java.util.List;
  * @since 2.0.0
  */
 public class HierarchicalPackageNameTests {
-    private static final Path RESOURCE_DIRECTORY = Paths.get(
+    private static final Path RESOURCE_DIRECTORY = Path.of(
             "src/test/resources/hierarchical_pkg_names").toAbsolutePath();
     private static final PrintStream out = System.out;
-    Path customUserHome = Paths.get("build", "userHome");
+    Path customUserHome = Path.of("build", "userHome");
 
     @BeforeTest
     public void setup() {
@@ -96,7 +95,7 @@ public class HierarchicalPackageNameTests {
                 "Unexpected number of dependencies");
     }
 
-    @Test(enabled = false)
+    @Test
     public void testResolveHierarchicalPackageInDist() {
         Path projectDirPath = RESOURCE_DIRECTORY.resolve("package_x.y.z");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
@@ -143,7 +142,7 @@ public class HierarchicalPackageNameTests {
         }
     }
 
-    @Test(enabled = false, dependsOnMethods = "testResolveHierarchicalPackageInDist")
+    @Test(dependsOnMethods = "testResolveHierarchicalPackageInDist")
     public void testResolveDifferentPackagesFromEachRepo() {
         Path centralCache = customUserHome.resolve("repositories/central.ballerina.io");
         BCompileUtil.compileAndCacheBala("hierarchical_pkg_names/package_a.c", centralCache);
