@@ -79,13 +79,11 @@ import java.lang.management.ManagementFactory;
 import java.lang.management.OperatingSystemMXBean;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static io.ballerina.projects.test.TestUtils.isWindows;
 import static io.ballerina.projects.test.TestUtils.replaceDistributionVersionOfDependenciesToml;
@@ -98,12 +96,11 @@ import static org.mockito.Mockito.when;
  *
  * @since 2.0.0
  */
-@Test(groups = "broken")
 public class PackageResolutionTests extends BaseTest {
-    private static final Path RESOURCE_DIRECTORY = Paths.get(
+    private static final Path RESOURCE_DIRECTORY = Path.of(
             "src/test/resources/projects_for_resolution_tests").toAbsolutePath();
     private static Path tempResourceDir;
-    private static final Path testBuildDirectory = Paths.get("build").toAbsolutePath();
+    private static final Path testBuildDirectory = Path.of("build").toAbsolutePath();
 
     @BeforeTest
     public void setup() throws IOException {
@@ -117,6 +114,7 @@ public class PackageResolutionTests extends BaseTest {
         replaceDependenciesTomlVersion(tempResourceDir.resolve("package_n"));
         replaceDependenciesTomlVersion(tempResourceDir.resolve("package_p_withDep"));
         replaceDependenciesTomlVersion(tempResourceDir.resolve("package_p_withoutDep"));
+        replaceDependenciesTomlVersion(tempResourceDir.resolve("package_z"));
     }
 
     @Test(description = "tests resolution with zero direct dependencies")
@@ -136,12 +134,13 @@ public class PackageResolutionTests extends BaseTest {
                 "Unexpected number of dependencies");
     }
 
-    @Test(description = "tests resolution with one direct dependency")
-    public void testProjectWithOneDependency() throws IOException {
+    @Test(description = "tests resolution with one direct dependency", dataProvider = "optimizeDependencyCompilation")
+    public void testProjectWithOneDependency(boolean optimizeDependencyCompilation) throws IOException {
         // package_b --> package_c
         Path projectDirPath = tempResourceDir.resolve("package_b");
         replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
-        BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
+        BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath,
+                BuildOptions.builder().setOptimizeDependencyCompilation(optimizeDependencyCompilation).build());
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
         // Check whether there are any diagnostics
@@ -154,8 +153,8 @@ public class PackageResolutionTests extends BaseTest {
                 "Unexpected number of dependencies");
     }
 
-    @Test(description = "tests resolution with invalid build file")
-    public void testProjectWithInvalidBuildFile() throws IOException {
+    @Test(description = "tests resolution with invalid build file", dataProvider = "optimizeDependencyCompilation")
+    public void testProjectWithInvalidBuildFile(boolean optimizeDependencyCompilation) throws IOException {
         // Package path
         Path projectDirPath = tempResourceDir.resolve("package_n");
 
@@ -165,7 +164,8 @@ public class PackageResolutionTests extends BaseTest {
         BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder();
         buildOptionsBuilder.setSticky(false);
         buildOptionsBuilder.targetDir(String.valueOf(projectDirPath.resolve(ProjectConstants.TARGET_DIR_NAME)));
-        BuildOptions buildOptions = buildOptionsBuilder.build();
+        BuildOptions buildOptions = buildOptionsBuilder.setOptimizeDependencyCompilation(
+                optimizeDependencyCompilation).build();
 
         Project loadProject = TestUtils.loadBuildProject(projectDirPath, buildOptions);
 
@@ -193,7 +193,6 @@ public class PackageResolutionTests extends BaseTest {
         BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder();
         buildOptionsBuilder.setSticky(false);
         BuildOptions buildOptions = buildOptionsBuilder.build();
-
         Project loadProject = TestUtils.loadBuildProject(projectDirPath, buildOptions);
 
         PackageCompilation compilation = loadProject.currentPackage().getCompilation();
@@ -365,18 +364,15 @@ public class PackageResolutionTests extends BaseTest {
                 "projectB");
         FileUtils.deleteDirectory(projectBCachePath.toFile());
 
-
         // Step 1 : Build ProjectB1 and Cache
         CompileResult depCompileResult = BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/projectB1");
         if (depCompileResult.getErrorCount() > 0) {
             Assert.fail("Package B contains compilations error");
         }
 
-
         // Step 2 : Build ProjectA with ProjectB as an import
         Path projectA = tempResourceDir.resolve("projectA");
         Project loadProjectA = TestUtils.loadBuildProject(projectA);
-
 
         // Step 3 : Get compilation of ProjectA and verify dependencies
         PackageCompilation compilation = loadProjectA.currentPackage().getCompilation();
@@ -387,7 +383,6 @@ public class PackageResolutionTests extends BaseTest {
                 Assert.assertEquals(manifest.version().toString(), "1.0.0");
             }
         }
-
 
         // Step 4 : Modify projectA to be blank
 
@@ -407,7 +402,6 @@ public class PackageResolutionTests extends BaseTest {
         Document document = defaultModuleProjectA.document(mainDocumentId.get());
         document.modify().withContent(newMainProjectAContent).apply();
 
-
         // Step 5 : Compile ProjectA and verify dependency
         compilation = loadProjectA.currentPackage().getCompilation();
         dependencyGraph = compilation.getResolution().dependencyGraph();
@@ -418,10 +412,8 @@ public class PackageResolutionTests extends BaseTest {
             }
         }
 
-
         // Step 6 : Clear ProjectB cache
         FileUtils.deleteDirectory(projectBCachePath.toFile());
-
 
         // Step 7 : Compile ProjectB2 and cache
         depCompileResult = BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/projectB2");
@@ -432,12 +424,15 @@ public class PackageResolutionTests extends BaseTest {
         // Step 8 : Clear ProjectB cache
         FileUtils.deleteDirectory(projectBCachePath.toFile());
 
-
         // Step 9 : Modify ProjectA again with the old content
 
         // - Step 9.1 : Get the main.bal file document
-        String oldMainProjectAContent = "import samjs/projectB;\n" + "\n" + "public function getHello() returns " +
-                "(string) {\n" + "    return projectB:hello();\n" + "}";
+        String oldMainProjectAContent = """
+                import samjs/projectB;
+
+                public function getHello() returns (string) {
+                    return projectB:hello();
+                }""";
 
         Module oldModuleProjectA = loadProjectA.currentPackage().getDefaultModule();
 
@@ -452,7 +447,6 @@ public class PackageResolutionTests extends BaseTest {
         // - Step 9.2 : Modify the content
         document = defaultModuleProjectA.document(mainDocumentId.get());
         document.modify().withContent(oldMainProjectAContent).apply();
-
 
         // Step 10 : Compile ProjectA and verify dependency
         compilation = loadProjectA.currentPackage().getCompilation();
@@ -513,11 +507,13 @@ public class PackageResolutionTests extends BaseTest {
         buildProject.currentPackage().getResolution();
     }
 
-    @Test(description = "Test dependencies should not be stored in bala archive")
-    public void testProjectWithTransitiveTestDependencies() throws IOException {
+    @Test(description = "Test dependencies should not be stored in bala archive",
+            dataProvider = "optimizeDependencyCompilation")
+    public void testProjectWithTransitiveTestDependencies(boolean optimizeDependencyCompilation) throws IOException {
         // package_with_test_dependency --> package_c
         Path projectDirPath = tempResourceDir.resolve("package_with_test_dependency");
-        BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath);
+        BuildProject buildProject = TestUtils.loadBuildProject(projectDirPath,
+                BuildOptions.builder().setOptimizeDependencyCompilation(optimizeDependencyCompilation).build());
         PackageCompilation compilation = buildProject.currentPackage().getCompilation();
 
         // Dependency graph should contain two entries here
@@ -547,9 +543,8 @@ public class PackageResolutionTests extends BaseTest {
         Assert.assertEquals(depGraphOfBala.getNodes().size(), 1);
     }
 
-    // TODO: enable after https://github.com/ballerina-platform/ballerina-lang/pull/31972 is merged
-    @Test(description = "Ultimate test case")
-    public void testProjectWithManyDependencies() {
+    @Test(description = "Ultimate test case", dataProvider = "optimizeDependencyCompilation")
+    public void testProjectWithManyDependencies(boolean optimizeDependencyCompilation) {
         BCompileUtil.compileAndCacheBala(
                 "projects_for_resolution_tests/ultimate_package_resolution/package_runtime");
         BCompileUtil.compileAndCacheBala(
@@ -563,12 +558,12 @@ public class PackageResolutionTests extends BaseTest {
 
         OperatingSystemMXBean os = ManagementFactory.getOperatingSystemMXBean();
         long initialOpenCount = 0;
-        if (os instanceof UnixOperatingSystemMXBean) {
-            UnixOperatingSystemMXBean unixOperatingSystemMXBean = (UnixOperatingSystemMXBean) os;
+        if (os instanceof UnixOperatingSystemMXBean unixOperatingSystemMXBean) {
             initialOpenCount = unixOperatingSystemMXBean.getOpenFileDescriptorCount();
         }
-        Project project = BCompileUtil.loadProject(
-                "projects_for_resolution_tests/ultimate_package_resolution/package_http");
+        Project project = TestUtils.loadProject(tempResourceDir
+                        .resolve("ultimate_package_resolution/package_http"),
+                BuildOptions.builder().setOptimizeDependencyCompilation(optimizeDependencyCompilation).build());
 
         PackageCompilation compilation = project.currentPackage().getCompilation();
         JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(compilation, JvmTarget.JAVA_17);
@@ -577,8 +572,7 @@ public class PackageResolutionTests extends BaseTest {
         diagnosticResult.errors().forEach(OUT::println);
         Assert.assertEquals(diagnosticResult.diagnosticCount(), 0, "Unexpected compilation diagnostics");
 
-        if (os instanceof UnixOperatingSystemMXBean) {
-            UnixOperatingSystemMXBean unixOperatingSystemMXBean = (UnixOperatingSystemMXBean) os;
+        if (os instanceof UnixOperatingSystemMXBean unixOperatingSystemMXBean) {
             Assert.assertEquals(initialOpenCount, unixOperatingSystemMXBean.getOpenFileDescriptorCount());
         }
 
@@ -621,41 +615,50 @@ public class PackageResolutionTests extends BaseTest {
         List<ResolvedPackageDependency> nodeInGraph = dependencyGraph.toTopologicallySortedList();
         Assert.assertEquals(nodeInGraph.size(), 2);
     }
-    // For this to be enabled, #31026 should be fixed.
-    @Test(enabled = false, dependsOnMethods = "testResolveDependencyFromUnsupportedCustomRepo")
-    public void testResolveDependencyFromCustomRepo() {
+
+    @Test (description = "Resolve a dependency from the local repo", dataProvider = "optimizeDependencyCompilation")
+    public void testResolveDependencyFromCustomRepo(boolean optimizeDependencyCompilation) throws IOException {
         Path projectDirPath = tempResourceDir.resolve("package_b");
-        String dependencyContent = "[[dependency]]\n" +
-                "org = \"samjs\"\n" +
-                "name = \"package_c\"\n" +
-                "version = \"0.1.0\"\n" +
-                "repository = \"local\"";
+        replaceDistributionVersionOfDependenciesToml(projectDirPath, RepoUtils.getBallerinaShortVersion());
+        String dependencyContent = """
+                
+                [[dependency]]
+                org = "samjs"
+                name = "package_c"
+                version = "0.1.0"
+                repository = "local\"""";
 
         // 1) load the build project
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(USER_HOME).build();
         ProjectEnvironmentBuilder projectEnvironmentBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
-        BuildProject project = TestUtils.loadBuildProject(projectEnvironmentBuilder, projectDirPath);
+        BuildOptions buildOptions = BuildOptions.builder()
+                .setOptimizeDependencyCompilation(optimizeDependencyCompilation).build();
+        BuildProject project = TestUtils.loadBuildProject(projectEnvironmentBuilder, projectDirPath, buildOptions);
 
         // 2) set local repository to dependency
-        project.currentPackage().dependenciesToml().orElseThrow().modify().withContent(dependencyContent).apply();
+        String currentContent = project.currentPackage().ballerinaToml().get()
+                .tomlDocument().textDocument().toString();
+        String updatedContent = currentContent.concat(dependencyContent);
+        project.currentPackage().ballerinaToml().orElseThrow().modify().withContent(updatedContent).apply();
 
         // 3) Compile and check the diagnostics
         PackageCompilation compilation = project.currentPackage().getCompilation();
         DiagnosticResult diagnosticResult = compilation.diagnosticResult();
 
         // 4) The dependency is expected to load from distribution cache, hence zero diagnostics
-        Assert.assertEquals(diagnosticResult.errorCount(), 2);
+        Assert.assertEquals(diagnosticResult.errorCount(), 0);
     }
 
     // For this to be enabled, #31026 should be fixed.
     @Test (enabled = false)
     public void testResolveDependencyFromUnsupportedCustomRepo() {
         Path projectDirPath = tempResourceDir.resolve("package_b");
-        String dependencyContent = "[[dependency]]\n" +
-                "org = \"samjs\"\n" +
-                "name = \"package_c\"\n" +
-                "version = \"0.1.0\"\n" +
-                "repository = \"stdlib.local\"";
+        String dependencyContent = """
+                [[dependency]]
+                org = "samjs"
+                name = "package_c"
+                version = "0.1.0"
+                repository = "stdlib.local\"""";
 
         // 2) load the build project
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(USER_HOME).build();
@@ -670,7 +673,7 @@ public class PackageResolutionTests extends BaseTest {
         // 4) The dependency is expected to load from distribution cache, hence zero diagnostics
         Assert.assertEquals(diagnosticResult.errorCount(), 3);
         List<String> diagnosticMsgs = diagnosticResult.errors().stream()
-                .map(Diagnostic::message).collect(Collectors.toList());
+                .map(Diagnostic::message).toList();
         Assert.assertTrue(diagnosticMsgs.contains("cannot resolve module 'samjs/package_c.mod_c1 as mod_c1'"));
     }
 
@@ -774,8 +777,8 @@ public class PackageResolutionTests extends BaseTest {
         // Check whether there are any diagnostics
         DiagnosticResult diagnosticResult = compilation.diagnosticResult();
         diagnosticResult.diagnostics().forEach(OUT::println);
-        Assert.assertEquals(diagnosticResult.errorCount(), 4, "Unexpected compilation diagnostics");
-        Assert.assertEquals(diagnosticResult.warningCount(), 1, "Unexpected compilation diagnostics");
+        Assert.assertEquals(diagnosticResult.errorCount(), 3, "Unexpected compilation diagnostics");
+        Assert.assertEquals(diagnosticResult.warningCount(), 2, "Unexpected compilation diagnostics");
 
         Iterator<Diagnostic> diagnosticIterator = diagnosticResult.diagnostics().iterator();
         Assert.assertTrue(diagnosticIterator.next().toString().contains(
@@ -784,8 +787,8 @@ public class PackageResolutionTests extends BaseTest {
         // Check dependency cannot be resolved diagnostic
         Assert.assertEquals(
                 diagnosticIterator.next().toString(),
-                "ERROR [Ballerina.toml:(21:12,21:21)] invalid 'repository' under [dependency]: 'repository' " +
-                        "can only have the value 'local'");
+                "WARNING [Ballerina.toml:(17:1,21:21)] Provided custom repository (invalid) cannot be found in the " +
+                        "Settings.toml. ");
         Assert.assertEquals(diagnosticIterator.next().toString(),
                             "ERROR [fee.bal:(1:1,1:16)] cannot resolve module 'ccc/ddd'");
         Assert.assertEquals(diagnosticIterator.next().toString(),
@@ -878,6 +881,29 @@ public class PackageResolutionTests extends BaseTest {
         DiagnosticResult diagnosticResult = compilation.diagnosticResult();
         diagnosticResult.errors().forEach(OUT::println);
         Assert.assertEquals(diagnosticResult.diagnosticCount(), 0, "Unexpected compilation diagnostics");
+    }
+
+    @Test(description = "Resolve dependencies when a dependency has a hierarchical name and is specified in " +
+            "the Ballerina.toml and the Dependencies.toml of the dependent")
+    public void testDependencyWithHierrarchicalNameInDepTomlAndBalToml() {
+        Path projectDirPath = tempResourceDir.resolve("package_z");
+
+        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_zz_1_0_0");
+        BCompileUtil.compileAndCacheBala("projects_for_resolution_tests/package_zz_1_0_2");
+
+        BuildOptions.BuildOptionsBuilder buildOptionsBuilder = BuildOptions.builder();
+        buildOptionsBuilder.setSticky(true);
+        BuildOptions buildOptions = buildOptionsBuilder.build();
+        Project loadProject = TestUtils.loadBuildProject(projectDirPath, buildOptions);
+
+        PackageCompilation compilation = loadProject.currentPackage().getCompilation();
+
+        DependencyGraph<ResolvedPackageDependency> dependencyGraph = compilation.getResolution().dependencyGraph();
+        ResolvedPackageDependency packageO =
+                dependencyGraph.getNodes().stream().filter(
+                        node -> node.packageInstance().manifest().name().toString().equals("foo.bar")
+                ).findFirst().orElseThrow();
+        Assert.assertEquals(packageO.packageInstance().manifest().version().toString(), "1.0.0");
     }
 
     private void replaceDependenciesTomlVersion(Path projectPath) throws IOException {
